--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Laço de Repetição</h1>
-  <div id="texto-animado">ATHLÉTICO PR</div>
+  <h1>pastel</h1>
+  <div id="texto-animado">Pastel de queijo</div>
   
     <script src="main.js"></script>    
 </body>
