--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>pastel</h1>
   <div id="texto-animado">Pastel de queijo</div>
+  <h2> é saboroso</h2>
   
     <script src="main.js"></script>    
 </body>
