--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <h1>pastel</h1>
   <div id="texto-animado">Pastel de queijo</div>
   <h2> é saboroso</h2>
+  <h1> Pastel de doce de leite</h1>
+  <h2> Aprenda a como fazer esta receita perfeita de pastel de doce de leite em sua casa e deixe as crianças babando. Não tem como não gostar desta delícia, seu sabor é inesquecível e super marcante. 
+
+    E, sabe o que é o melhor de tudo? É que essa receita pode ser preparada tanto frita quanto assada! Portanto, se você está de dieta e quer tomar cuidado com a quantidade de calorias ingeridas em sua alimentação, não precisa se preocupar. Afinal, existem formas de a deixar ainda mais saudável.
+    
+    Para acompanhar, indicamos que prepare outros sabores de pastel. Dessa forma, quem não gosta de doce de leite não ficará de fora. Um dos pratos que estão bombando em nosso blog e que são super indicados é o pastel de carne com açúcar. </h2>
   
     <script src="main.js"></script>    
 </body>
